# gate_vs_orcestra

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: cids.yml
data/: README_airt.txt  airt4n23w_dy.cdf  mean_GATE_v0_east_GATE_sd_bg_int.nc  mean_RAPSODI_L2_v0_east_sd_bg_int.nc
data/best.zarr/: .zattrs  .zmetadata
data/best_gate_ab.zarr/: zarr.json
gate_processing/: GATE_Meteor_radiosonde.f90  GATE_other_radiosonde.f90  GATE_tape_contents.odt  GATEdship.sh  GATEdship_1a7095.f90  GATEdship_f61f70.f90  GATEdship_fdfbef.f90  GATEradiosonde.sh  GATEsort.sh  Makefile.levante  Makefile.mpim  Makefile.osx  README  README.md  make_gate_l2.py  make_gate_l3.py  nc_to_zarr.py  positions.py  pydropsonde4gate.py  reprocess_rapsodi.py
gate_vs_orcestra/: compare_rvs.py  compare_soundings.py  data_utils.py  distribution_plot.py  gate.mplstyle  go_spatial.py  iwv_plot.py  main.py  mk-sounding-dataset.py  mooring_rescue_soundings.py  nc_to_zarr.py  passive-microwave-halo.py  pirata_analysis_gate_domain.py  quality_control.py  rce_simulation.py  reanalysis_temperature.py  rh_2d_plot.py  rh_distribution_plot.py  settings_and_colors.py  ships.py  sm-sounding-anal.py  soundings.py
gate_vs_orcestra/quality_control/: check_nspike.py  hydrostaticity.py  temperature_height.py
gate_vs_orcestra/sanity_checks/: alt_vs_gpsalt.py  rapsodi_vs_beach.py
gate_vs_orcestra/utilities/: data_utils.py  gate.mplstyle  gate_process.py  thermo.py  (+4 more)
palmer-singh/: palmer-singh.py
pirata/: pirata_analysis_gate_domain.py
tests/: test_cids.py  test_processing.py
(+120 files in other folders)
