[project]
name = "gate-vs-orcestra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bottleneck>=1.5.0",
    "cartopy>=0.24.1",
    "cmocean>=4.0.3",
    "flox>=0.10.4",
    "fsspec>=2025.7.0",
    "intake<2",
    "intake-xarray>=0.7.0",
    "ipfsspec>=0.5.3",
    "matplotlib>=3.10.3",
    "moist-thermodynamics>=0.0.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "xarray>=2025.7.1",
    "xhistogram>=0.3.2",
    "zarr>=3.1.0",
]
