[project]
name = "gate-vs-orcestra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "bottleneck",
    "cartopy",
    "cmocean",
    "easygems",
    "flox",
    "fsspec",
    "intake<2",
    "intake-xarray<2",
    "ipfsspec>=0.5.3",
    "ipykernel",
    "ipython",
    "matplotlib",
    "moist-thermodynamics>=0.0.4",
    "numpy",
    "pandas",
    "pytest",
    "requests",
    "ruff",
    "scipy",
    "seaborn",
    "setuptools>=80.9.0",
    "xarray",
    "xhistogram",
    "zarr>2",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "gate_vs_orcestra",
]
